...
                    ),
                    const SizedBox(height: 20),
                    FadeInDown(
					  delay: const Duration(milliseconds: 200),
                      duration: const Duration(milliseconds: 800),
                      child: const Text(
                        "Create Account",
                        style: TextStyle(
                            fontSize: 32,
                            fontWeight: FontWeight.bold,
                            color: Colors.white),
                      ),
                    ),
...
